css/context.css
.color_code{
    color:#22c399;
}
.color_code_whois{
    color: #ffcc66;
}
.row{
    margin: auto;
}
body{
    max-height: 100%;
}
p{
    font-family:Gill Sans Light;
    font-size: 20px;
}
#box-twitter{
    margin-bottom: 12px;
    padding: 5px 5px 5px 5px;
    background-color: #fff;
    border-radius: 5px;
    overflow: scroll;
    box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.1);
    border:1px solid black;
}
@media screen and (min-width: 700px) {
    .test {
        text-align: center;
    }
}
.box{
    border:1px solid black;
    border-radius: 5px;
    box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.1);
/*
    display: flex;
    flex :0 0 420px;
    flex-direction: column;
    justify-content: center;
*/
    margin-bottom: 12px;
    overflow: hidden;
    padding: 5px 5px 5px 5px;
}
.target-selector-exact{
    word-wrap: break-word;
    font-family:'Courier New', Courier, monospace;
}
#link-incontext{
    margin-left:40px;
}
#link-html{
    margin-left: 70px;
}
#date{
    position: absolute;
    right: 20px;
}
.source{
    padding: 5px;
}
#text-contain{
    padding: 5px;
}
#target-selector-exact-contain{
    padding: 5px;
    border-left: 3px solid #d3d3d3;
    color: #7A7A7A;
}
#target-selector-exact-contain:hover{
    border-left: 3px solid #58CEF4;
}
#links{
    padding: 10px;
}
.row_main{
    align-items: stretch;
    display: flex;
    justify-content: center;
}
@media screen and (max-width: 500px) {
    #link-incontext {
      margin-left: 5px;
    }
    #link-html{
        margin-left: 10px;
    }
}
.wordcloud {
    border: 1px solid #036;
    height: 7in;
    margin: 0.5in auto;
    padding: 0;
    page-break-after: always;
    page-break-inside: avoid;
    display: inline-block;
    width: 7in;
}
#public_on{
    font-weight: 150%;
    color: #818181;
}
.pre{
    font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
    display: block;
    padding: 9.5px;
    margin: 0 0 10px;
    font-size: 20px;
    line-height: 1.42857143;
    color: #333;
    word-break: break-all;
    word-wrap: break-word;
    background-color: #f5f5f5;
    border: 1px solid #ccc;
    border-radius: 4px;
}

.col-sm-6 {
    margin:auto;
    width:700px;
    float:none;
}
.col-sm-12{
    float:none;
}
/* https://www.w3schools.com/howto/howto_js_tabs.asp */
/* Style the tab */
.container-fluid{
    margin: 0;
    padding: 0;
}

.col-tablinks{
    background-color: #f1f1f1;
}
/* Style the buttons that are used to open the tab content */
.col-tablinks button {
    background-color: inherit;
    float: left;
    border: none;
    outline: none;
    cursor: pointer;
    padding: 14px 16px;
    transition: 0.3s;
    height: 100px;
    width: 20%;
    font-weight: bold;
    font-size: 20px;
}

/* Change background color of buttons on hover */
.col-tablinks button:hover {
    background-color: #ddd;
}

/* Create an active/current tablink class */
.col-tablinks button.active {
    background-color: #ccc;
}

/* Style the tab content */
.tabcontent {
    display: none;
    padding: 6px 12px;
}

#row_contain-url, #row_contain-domain {
    display: none;
}
#Annotations{
    width: 100%;
}
#annotations_url{
    margin: 0px;
    float: left;
}
#annotations_domain{
    margin: 0px;
    float: right;
}

#container-whole-url, #container-whole-domain {
    max-height: 500px;
    overflow: scroll;
}

.title {
    text-align: center;
}

